Fix rankings overflow.

--- a/src/view/ranking.css
+++ b/src/view/ranking.css
@@ -1,5 +1,6 @@
 
 :local(.ranking) {
-    height: 398px;
-    overflow: hidden;
+    height: 394px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
